--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="card">
                     <img src="ugc dashboard.png">
                     <h3>UGC NOTION BOARD TEMPLATES</h3>
-                    <a href="https://www.raket.ph/aleyaastudio/products/ugc-notion-dashboard">
+                    <a href="https://aleyastudio.gumroad.com/l/UGCNotionDashboard">
                         SEE MORE!
                     </a>
                 </div>
