--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="containers">
                 <div class="card">
                     <img src="13.png">
-                    <h3>UGC PORTFOLIO WEBSITE </h3>
+                    <h3>UGC PORTFOLIO <br> WEBSITE </h3>
                     <a href="https://www.raket.ph/aleyaastudio/products/ugc-portfolio-website">
                         SEE MORE!
                     </a>
